<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="your_web_client_id">335865405389-he5bn50sh8fdolbed05oo2v72qt6soha.apps.googleusercontent.com</string>
    <string name="forgot_your_account_password_restore">Forgot your account password? Restore!</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_in_your_account">Sign in your account!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restore_password">Restore Password</string>
    <string name="email">Email</string>
    <string name="restore">Restore</string>
    <string name="password">Password</string>
    <string name="remember_me" >Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="create_your_account">Create your account</string>
    <string name="or">Or</string>
</resources>